# tempest

./: .gitignore  Cargo.toml  LICENSE  README.md  config.yml  download_models.sh  flake.nix
client/: Cargo.toml  build.rs
client/src/: april_model.rs  config.rs  main.rs  model.rs  state.rs
client/src/aprilasr-sys/: .cargo_vcs_info.json  COPYING  Cargo.toml  Cargo.toml.orig  README.md  build.rs
client/src/aprilasr-sys/src/: lib.rs
daemon/: Cargo.toml
daemon/src/: config.rs  main.rs  virtualdevice.rs
src/: config.rs  lib.rs  llm.rs  main.rs  state.rs
src/aprilasr/: lib.rs
src/aprilasr-sys/: build.rs  wrapper.h
src/aprilasr-sys/src/: lib.rs
