[package]
name = "tempest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
aprilasr = "0.1.2"
cpal = "0.15.2"
lazy_static = "1.4.0"
log = "0.4.20"
mouse-keyboard-input = "0.4.1"
reqwest = { version = "0.11.24", default-features = false, features = ["json", "blocking", "rustls"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.32"
simple_logger = "4.3.3"
