[package]
name = "tempest-daemon"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.80"
hex = "0.4.3"
log = "0.4.20"
mouse-keyboard-input = "0.4.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.34"
